--- a/golf_spec_ui/static/stylesheets/style.css
+++ b/golf_spec_ui/static/stylesheets/style.css
@@ -1,14 +1,26 @@
 body {
-    background: white;
-    margin: 0
+  background: white;
+  margin: 0;
 }
 
 .header {
-    height: 160px;
-    background: lightblue;
-    text-align: center;
-    font-weight: bold;
-    font-size: 2.75em;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    line-height: 160px;
+  height: 80px;
+  border-bottom: rgb(155, 6, 155) solid 4px;
+  margin-bottom: 5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 2.75em;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  line-height: 80px;
+}
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  border-top: 1px solid black;
+  text-align: center;
 }
