--- a/golf_spec_ui/templates/base.html
+++ b/golf_spec_ui/templates/base.html
@@ -14,8 +14,7 @@
     <div class="header">{% block header %} {% endblock %}</div>
     <div class="content">{% block content %}{% endblock %}</div>
     <div class="footer">
-        {% block footer %} &copy; Copyright 2010 by
-        <a href="http://domain.invalid/">you</a>. {% endblock %}
+        {% block footer %} &copy; Copyright 2018 by John Wick {% endblock %}
     </div>
 </body>
 
