--- a/golf_spec_ui/templates/index.html
+++ b/golf_spec_ui/templates/index.html
@@ -6,8 +6,19 @@
 <div class="header-title">
     Golf Specs
 </div>
-{% endblock %}
+{% endblock %} 
 
 {% block content %}
-<div> Some name: {{name}}</div>
+<dir>
+    <div> Welcome to Golf Club Specs, Please Select your user!</div>
+    <ul>
+        {% for user in users %}
+            <li>
+                <a href= {{ url_for('user', user_id= user['id'])}}>
+                    {{user['name']}}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+</dir>
 {% endblock %}
