sorted clubs by loft

--- a/golf_spec_ui/templates/user.html
+++ b/golf_spec_ui/templates/user.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 <div>
-    <div> User Club Specs:</div>
+    <h2> User Club Specs:</h2>
     <div class="club-spec" id="driver"> 
             <div="title">Drivers</div>
             <ul>
