--- a/golf_spec_ui/static/stylesheets/style.css
+++ b/golf_spec_ui/static/stylesheets/style.css
@@ -3,10 +3,15 @@ body {
   margin: 0;
 }
 
+.content{
+    min-height: calc(100% - 80px - 51px);
+    width: 80%;
+    margin: 0 auto;
+}
+
 .header {
   height: 80px;
   border-bottom: rgb(155, 6, 155) solid 4px;
-  margin-bottom: 5px;
   text-align: center;
   font-weight: bold;
   font-size: 2.75em;
@@ -18,8 +23,8 @@ body {
 .footer {
   position: absolute;
   right: 0;
-  bottom: 0;
   left: 0;
+  width: 100%;
   padding: 1rem;
   border-top: 1px solid black;
   text-align: center;
