--- a/golf_spec_ui/templates/user.html
+++ b/golf_spec_ui/templates/user.html
@@ -17,7 +17,7 @@
                         <li>Loft: {{club['loft']}}</li>
                         <li>Lie: {{club['lie']}}</li>
                         <li>Length: {{club['length']}}</li>
-                        <li>Shaft: {{club['shaft']['brand']}} {{club['shaft']['model']}} {{club['shaft']['flex']}}
+                        <li>Shaft: {{club['shaft']['brand']}} {{club['shaft']['model']}} ({{club['shaft']['flex'].title()}})
                         </li>
                     </ul>
                 </div>
