styling and breadcrumb

--- a/golf_spec_ui/templates/user.html
+++ b/golf_spec_ui/templates/user.html
@@ -1,18 +1,24 @@
-{% extends "base.html" %} {% block title %} {{user_id}} {% endblock %} 
-{% block content %}
-<div>
+{% extends "bootstrap/base.html" %} {% block styles %} {{super()}}
+<link rel="stylesheet" href="{{url_for('static', filename='stylesheets/style.css')}}"> {% endblock %} {% block title %}{{name}}{% endblock %} {% block navbar %}
+{% endblock %} {% block content %}
+<div class="content">
     <div>
-    <div class="user-name-title"> <b>CLUBS|</b>{{name}} </div>
-    <hr>
+        <ol class="breadcrumb">
+            <li><a href= {{url_for('index')}}>Home</a></li>
+            <li class="active">{{name}}</li>
+        </ol>
+        <div class="user-name-title">
+            <b>CLUBS|</b>{{name}} </div>
+        <hr> 
         {% for categories, clubs in clubCategories.items() %}
         <div class="club-spec">
             <h4 class="spec-title">{{categories.upper()}}</h4>
             <div class="club-container">
                 {% for club in clubs %}
                 <div class="club">
-                <div class="club-title">
-                    {{club['brand']}} {{club ['model']}} ({{club['number']}})
-                </div>
+                    <div class="club-title">
+                        {{club['brand']}} {{club ['model']}} ({{club['number']}})
+                    </div>
                     <ul>
                         <li>Loft: {{club['loft']}}</li>
                         <li>Lie: {{club['lie']}}</li>
