--- a/golf_spec_ui/static/stylesheets/style.css
+++ b/golf_spec_ui/static/stylesheets/style.css
@@ -34,6 +34,16 @@ a.list-group-item {
   margin: 0 auto;
 }
 
+.content .breadcrumb {
+    background: none;
+    margin-top: 8px;
+    margin-bottom: 0;
+    padding: 0;
+    padding-left: 5px;
+    font-size: 1em;
+    /* text-align: right; */
+}
+
 .header {
   height: 80px;
   border-bottom: #ff3b3f solid 4px;
@@ -47,16 +57,19 @@ a.list-group-item {
 
 .user-name-title {
   font-family: monospace;
-  font-size: 2.5em;
-  margin: 20px 0;
+  font-size: 2.20em;
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
-.club-spec {
-  margin: 30px 0;
-}
+/* .club-spec {
+  margin: 10px 0;
+  box-sizing: border-box;
+} */
 
 .spec-title {
   font-size: 17px;
+  font-weight: bold;
   line-height: 25px;
   box-sizing: border-box;
   padding-left: 10px;
@@ -98,10 +111,26 @@ a.list-group-item {
   .club-container {
     grid-template-columns: 1fr 1fr;
   }
+
+  .content{
+      width: 80%
+  }
+
+  .jumbotron .container {
+    width: 80%;
+  }
 }
 
 @media only screen and (max-width: 540px) {
   .club-container {
     grid-template-columns: 1fr;
+  }
+
+  .content{
+    width: 80%
+}
+
+.jumbotron .container {
+    width: 80%;
   }
 }
